Creates 'docs' folder

--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
   </head>
 
   <body>
     <p>Yeah, I'm going to need you to come in on Saturday</p>
+
+    <canvas id="initechtris"></canvas>
+
+    <script src="lib/bundle.js"></script>
   </body>
 </html>
