Canvas view setup

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+      .game-board {
+        border: 4px solid #ECA400;
+        height: 90%;
+      }
+    </style>
   </head>
 
   <body>
     <p>Yeah, I'm going to need you to come in on Saturday</p>
 
-    <canvas id="initechtris"></canvas>
+    <canvas class="game-board" id="initechtris"></canvas>
 
     <script src="lib/bundle.js"></script>
   </body>
