--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         height: 90%;
       }
     </style>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
 
   <body>
