Grid and methods layout

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <p>Yeah, I'm going to need you to come in on Saturday</p>
+    <p>Yeah, I'm going to need you to come in on Saturday...and Sunday</p>
 
     <canvas class="game-board" id="initechtris"></canvas>
 
