--- a/gridris/index.html
+++ b/gridris/index.html
@@ -27,10 +27,10 @@
 <div id="tetris" class="grid"></div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="grid.js"></script>
-<script src="tetris.js"></script>
-<script src="main.js"></script>
-<script>
+<script src="bundle.js"></script>
+<!-- <script src="tetris.js"></script>
+<script src="main.js"></script> -->
+<!-- <script>
 
 // initialize grid within tetris
 (function() {
@@ -43,7 +43,7 @@
     });
     grid.getCellAt(2, 4).$el.css('background', 'red');
 }());
-</script>
+</script> -->
 
 
 </body>
