--- a/index.html
+++ b/index.html
@@ -1,21 +1,51 @@
-<!doctype html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-      .game-board {
-        border: 4px solid #ECA400;
-        height: 90%;
-      }
-    </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  </head>
+<html>
+<head>
+    <title>Initechtris</title>
+    <link rel="stylesheet" href="stylesheets/reset.css"></link>
+    <link rel="stylesheet" href="stylesheets/main.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Damion|Montserrat:400,700i" rel="stylesheet">
+</head>
+<body>
 
-  <body>
-    <p>Yeah, I'm going to need you to come in on Saturday...and Sunday</p>
+  <div class="game">
+    <div class="sponsor-window">
+      <div class="initechtris">Initechtris</div>
+      <p>sponsored by <span class="initech">Initech</span></p>
+      <p><span class="tagline">now featuring covers on our </span>TPS Reports!</p>
+    </div>
+    <div class="game-window">
+      <canvas id="tetris" width="240" height="400" />
+    </div>
 
-    <canvas class="game-board" id="initechtris"></canvas>
+    <div class="game-panel">
+      <div id="score"></div>
+      <h2>Controls</h2>
+        <ul>
+          <li>Left : <span class="arrow">&#9664;</span></li>
+          <li>Right : <span class="arrow">&#9654;</span></li>
+          <li>Step Drop : <span class="arrow">&#9660;</span></li>
+          <li>Rotate : <span class="space">Spacebar</span></li>
+        </ul>
+
+      <div class="id-card">
+        <div class="header-logo"></div>
+        <div class="employee">
+          <img class="employee-photo" src="http://vignette4.wikia.nocookie.net/uncyclopedia/images/4/48/MiltonStapler.jpg/revision/latest?cb=20101026223646" height="150px" alt="milton"/>
+          <div class="bio">
+            <div class-"employee-name">Milton Waddams</div>
+            <div class="employee-role">Collator</div>
+            <div clas="employee-dept">Basement Level</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 
     <script src="lib/bundle.js"></script>
-  </body>
+    <!-- <script src="board.js"></script>
+    <script src="piece.js"></script>
+    <script src="game.js"></script>
+    <script src="initechtris.js"></script> -->
+</body>
 </html>
