--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
   </div>
 
 
-    <script src="lib/bundle.js"></script>
-    <!-- <script src="board.js"></script>
+    <!-- <script src="lib/bundle.js"></script> -->
+    <script src="board.js"></script>
     <script src="piece.js"></script>
     <script src="game.js"></script>
-    <script src="initechtris.js"></script> -->
+    <script src="initechtris.js"></script>
 </body>
 </html>
