Working code and styled.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="stylesheet" href="stylesheets/reset.css"></link>
     <link rel="stylesheet" href="stylesheets/main.css"></link>
     <link href="https://fonts.googleapis.com/css?family=Damion|Montserrat:400,700i" rel="stylesheet">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
 </head>
 <body>
 
@@ -12,13 +13,24 @@
       <div class="initechtris">Initechtris</div>
       <p>sponsored by <span class="initech">Initech</span></p>
       <p><span class="tagline">now featuring covers on our </span>TPS Reports!</p>
+      <div class="id-card">
+        <div class="header-logo"></div>
+        <div class="employee">
+          <img class="employee-photo" src="http://vignette4.wikia.nocookie.net/uncyclopedia/images/4/48/MiltonStapler.jpg/revision/latest?cb=20101026223646" height="150px" alt="milton"/>
+          <div class="bio">
+            <div id="name" class-"employee-name">Milton Waddams</div>
+            <div class="employee-role">Collator</div>
+            <div clas="employee-dept">Basement Level</div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="game-window">
-      <canvas id="tetris" width="240" height="400" />
+      <canvas id="initechtris" width="240" height="400" />
     </div>
 
     <div class="game-panel">
-      <div id="score"></div>
+      <div class="score-text">Score</div><div id="score"></div>
       <h2>Controls</h2>
         <ul>
           <li>Left : <span class="arrow">&#9664;</span></li>
@@ -26,26 +38,12 @@
           <li>Step Drop : <span class="arrow">&#9660;</span></li>
           <li>Rotate : <span class="space">Spacebar</span></li>
         </ul>
-
-      <div class="id-card">
-        <div class="header-logo"></div>
-        <div class="employee">
-          <img class="employee-photo" src="http://vignette4.wikia.nocookie.net/uncyclopedia/images/4/48/MiltonStapler.jpg/revision/latest?cb=20101026223646" height="150px" alt="milton"/>
-          <div class="bio">
-            <div class-"employee-name">Milton Waddams</div>
-            <div class="employee-role">Collator</div>
-            <div clas="employee-dept">Basement Level</div>
-          </div>
-        </div>
-      </div>
     </div>
   </div>
 
-
-    <!-- <script src="lib/bundle.js"></script> -->
-    <script src="board.js"></script>
-    <script src="piece.js"></script>
-    <script src="game.js"></script>
-    <script src="initechtris.js"></script>
+  <script src="board.js"></script>
+  <script src="piece.js"></script>
+  <script src="game.js"></script>
+  <script src="game_view.js"></script>
 </body>
 </html>
