--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.4.min.js"></script>
 </head>
 <body>
+  <div><p id="start"><a href="javascript:play();"> Press Enter to Begin</a></p></div>
+
 
   <div class="game">
     <div class="sponsor-window">
