--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
   <!-- <div><p id="start"><a href="javascript:play();"> Press Enter to Begin</a></p></div> -->
 
-
   <div class="game">
     <div class="sponsor-window">
       <div class="initechtris">Initechtris</div>
@@ -35,10 +34,11 @@
       <div class="score-text">Score</div><div id="score"></div>
       <h2>Controls</h2>
         <ul>
-          <li>Left : <span class="arrow">&#9664;</span></li>
-          <li>Right : <span class="arrow">&#9654;</span></li>
-          <li>Step Drop : <span class="arrow">&#9660;</span></li>
-          <li>Rotate : <span class="space">Spacebar</span></li>
+          <li>Left : <span id="left" class="arrow">&#9664;</span></li>
+          <li>Right : <span id="right" class="arrow">&#9654;</span></li>
+          <li>Step Drop : <span id="down" class="arrow">&#9660;</span></li>
+          <li>Rotate : <span id="spacebar" class="space">Spacebar</span></li>
+          <li>Pause : <span id="return" class="return">Return</span></li>
         </ul>
     </div>
   </div>
