Pause and Play working

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <li>Right : <span id="right" class="arrow">&#9654;</span></li>
           <li>Step Drop : <span id="down" class="arrow">&#9660;</span></li>
           <li>Rotate : <span id="spacebar" class="space">Spacebar</span></li>
-          <li>Pause : <span id="return" class="return">Return</span></li>
+          <li>Start/Pause : <span id="return" class="return">Return</span></li>
         </ul>
     </div>
   </div>
