--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
           <li>Step Drop : <span id="down" class="arrow">&#9660;</span></li>
           <li>Rotate : <span id="spacebar" class="space">Spacebar</span></li>
           <li>Start/Pause : <span id="return" class="return">Return</span></li>
+          <audio controls autoplay>
+     <source src="Office_Space.mp3" type="audio/mpeg">
+     Your browser does not support the audio element.
+     </audio>
         </ul>
     </div>
   </div>
