--- a/index.html
+++ b/index.html
@@ -9,39 +9,44 @@
 <body>
   <div class="game">
     <div class="sponsor-window">
-      <div class="initechtris">Initechtris</div>
-      <p>sponsored by <span class="initech">Initech</span></p>
-      <p><span class="tagline">now featuring covers on our </span>TPS Reports!</p>
-      <div class="id-card">
-        <div class="header-logo"></div>
-        <div class="employee">
-          <img class="employee-photo" src="http://vignette4.wikia.nocookie.net/uncyclopedia/images/4/48/MiltonStapler.jpg/revision/latest?cb=20101026223646" height="150px" alt="milton"/>
-          <div class="bio">
-            <div id="name" class-"employee-name">Milton Waddams</div>
-            <div class="employee-role">Collator</div>
-            <div clas="employee-dept">Basement Level</div>
+      <div class="sponsor-text">
+        <p class="office-space title">Office S<span class="capital-p">p</span>ace</p>
+        <p><span style="font-family:'Montserrat';">sponsored by </span><span class="swingline">Swingline</span></p>
+        <!-- <p><span class="tagline">official stapler of </span>Initech</p> -->
+        <!-- <div class="id-card">
+          <div class="header-logo"></div>
+          <div class="employee">
+            <img class="employee-photo" src="http://vignette4.wikia.nocookie.net/uncyclopedia/images/4/48/MiltonStapler.jpg/revision/latest?cb=20101026223646" height="150px" alt="milton"/>
+            <div class="bio">
+              <div id="name" class-"employee-name">Milton Waddams</div>
+              <div class="employee-role">Collator</div>
+              <div clas="employee-dept">Basement Level</div>
+            </div>
           </div>
-        </div>
+        </div> -->
       </div>
     </div>
     <div class="game-window">
       <canvas id="initechtris" width="240" height="400" />
     </div>
-
     <div class="game-panel">
+      <!-- <div class="lumbergh"></div> -->
       <div class="score-text">Score</div><div id="score"></div>
-      <h2>Controls</h2>
-        <ul>
-          <li>Left : <span id="left" class="arrow">&#9664;</span></li>
-          <li>Right : <span id="right" class="arrow">&#9654;</span></li>
-          <li>Step Drop : <span id="down" class="arrow">&#9660;</span></li>
-          <li>Rotate : <span id="spacebar" class="space">Spacebar</span></li>
-          <li>Start/Pause : <span id="return" class="return">Return</span></li>
-          <!-- <audio controls autoplay>
-             <source src="Office_Space.mp3" type="audio/mpeg">
-           Your browser does not support the audio element.
-           </audio> -->
-        </ul>
+      <div class="controls">
+        <h2>Controls</h2>
+          <ul>
+            <li>Pause : <span id="return" class="return">Enter</span></li>
+            <!-- <li>Left : <span id="left" class="arrow">&#9664;</span></li>
+            <li>Right : <span id="right" class="arrow">&#9654;</span></li>
+            <li>Step Drop : <span id="down" class="arrow">&#9660;</span></li> -->
+            <li>Move : <span id="left" class="arrow">&#9664;,</span><span id="down" class="arrow">&#9660;,</span><span id="right" class="arrow">&#9654;</span></li>
+            <li>Rotate : <span id="spacebar" class="space">Spacebar</span></li>
+            <!-- <audio controls autoplay>
+               <source src="Office_Space.mp3" type="audio/mpeg">
+             Your browser does not support the audio element.
+             </audio> -->
+          </ul>
+      </div>
     </div>
   </div>
 
