--- a/index.html
+++ b/index.html
@@ -32,24 +32,18 @@
     <div class="game-panel">
       <!-- <div class="lumbergh"></div> -->
       <div class="score-text">Score</div><div id="score"></div>
-      <div class="controls">
+      <!-- <div class="controls">
         <h2>Controls</h2>
           <ul>
             <li>Pause : <span id="return" class="return">Enter</span></li>
-            <!-- <li>Left : <span id="left" class="arrow">&#9664;</span></li>
-            <li>Right : <span id="right" class="arrow">&#9654;</span></li>
-            <li>Step Drop : <span id="down" class="arrow">&#9660;</span></li> -->
             <li>Move : <span id="left" class="arrow">&#9664;,</span><span id="down" class="arrow">&#9660;,</span><span id="right" class="arrow">&#9654;</span></li>
             <li>Rotate : <span id="spacebar" class="space">Spacebar</span></li>
-            <!-- <audio controls autoplay>
-               <source src="Office_Space.mp3" type="audio/mpeg">
-             Your browser does not support the audio element.
-             </audio> -->
           </ul>
-      </div>
+      </div> -->
     </div>
   </div>
-
+  <div class="lumbergh"></div>
+  <!-- <div class="printer"></div> -->
   <script src="game_view.js"></script>
 </body>
 </html>
