Printer Attack Background and styling of fonts

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="sponsor-window">
       <div class="sponsor-text">
         <p class="office-space title">Office S<span class="capital-p">p</span>ace</p>
-        <p><span style="font-family:'Montserrat';">sponsored by </span><span class="swingline">Swingline</span></p>
+        <p><span class="sponsor-text">sponsored by </span><img class="swingline" src="assets/swingline.svg" /></p>
         <!-- <p><span class="tagline">official stapler of </span>Initech</p> -->
         <!-- <div class="id-card">
           <div class="header-logo"></div>
